--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,30 +1,55 @@
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <form class="form edit-post-form">
-          <div class="form-group">
-            <label for="post-title">Post Title:</label>
-            <input class="form-input" type="text" id="post-title" name="post-title" value="{{post.title}}" />
+<div class='card' style='width: 18rem;'>
+  <div class='card-body'>
+    <div class='row mt-4'>
+      <div class='col-md-6'>
+        <form class='form edit-post-form'>
+          <div class='form-group'>
+            <label for='post-title'>Post Title:</label>
+            <input
+              class='form-input'
+              type='text'
+              id='post-title'
+              name='post-title'
+              value='{{post.title}}'
+            />
           </div>
-          <div class="form-group">
-            <label for="post-content">Post Contents:</label>
-            <textarea class="form-input" id="post-content" name="post-content">{{post.content}}</textarea>
+          <div class='form-group'>
+            <label for='post-content'>Post Contents:</label>
+            <textarea
+              class='form-input'
+              id='post-content'
+              name='post-content'
+            >{{post.content}}</textarea>
           </div>
-          <div class="form-group">
-            <label for="post-category">Category:</label>
-            <input list="category" class="form-control" id="post-category" value="{{post.category.name}}">
-            <datalist id="category">
+          <div class='form-group'>
+            <label for='post-category'>Category:</label>
+            <input
+              list='category'
+              class='form-control'
+              id='post-category'
+              value='{{post.category.name}}'
+            />
+            <datalist id='category'>
               {{#each categories as |category|}}
-              <option data-id="{{category.id}}">{{category.name}}</option>
+                <option data-id='{{category.id}}'>{{category.name}}</option>
               {{/each}}
             </datalist>
           </div>
-          <div class="form-group">
-            <button type="button" class="btn btn-primary" data-id="{{post.id}}" id="update-post">Update Post</button>
+          <div class='form-group'>
+            <button
+              type='button'
+              class='btn btn-primary'
+              data-id='{{post.id}}'
+              id='update-post'
+            >Update Post</button>
           </div>
-          <div class="form-group">
-            <button type="button" class="btn btn-primary btn-danger" data-id="{{post.id}}" id="delete-post">Delete Post</button>
+          <div class='form-group'>
+            <button
+              type='button'
+              class='btn btn-primary btn-danger'
+              data-id='{{post.id}}'
+              id='delete-post'
+            >Delete Post</button>
           </div>
         </form>
       </div>
@@ -32,4 +57,4 @@
   </div>
 </div>
 
-<script src="/./js/postForm.js"></script>
+<script src='/./js/postForm.js'></script>
