--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,16 +1,26 @@
-{{!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> --}}
-<div class="row">
-  <div class="col-auto" >
+{{! <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> }}
+<div class='row'>
+  <div class='col-auto'>
     <h2>Hello, {{username}} what would you like to do today?</h2>
   </div>
 </div>
-<nav class="navbar navbar-expand-lg " id="profileCatNav">
+<nav class='navbar navbar-expand-lg' id='profileCatNav'>
   {{#each categories as |category|}}
-  <a class="navbar-brand" href="/category/{{category.id}}">{{category.name}}</a>
+    <a
+      class='navbar-brand'
+      href='/category/{{category.id}}'
+    >{{category.name}}</a>
   {{/each}}
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <button
+    class='navbar-toggler'
+    type='button'
+    data-toggle='collapse'
+    data-target='#navbarSupportedContent'
+    aria-controls='navbarSupportedContent'
+    aria-expanded='false'
+    aria-label='Toggle navigation'
+  >
+    <span class='navbar-toggler-icon'></span>
   </button>
 
   <div class='collapse navbar-collapse' id='navbarSupportedContent'>
@@ -21,18 +31,22 @@
   </div>
 </nav>
 
-{{!-- Seperating coll --}}
+{{! Seperating coll }}
 
-{{!-- Create post button --}}
-<div class="card" id="profileMainCard">
-  <div class="container">
-    <div class="text-center">
-      <div class="row">
-        {{!-- first --}}
-        <div class="col">
-          <a href='/post/new' class="btn btn-primary btn-lg" id="profileCreatePostBtn">Create a new Post</a>
+{{! Create post button }}
+<div class='card' id='profileMainCard'>
+  <div class='container'>
+    <div class='text-center'>
+      <div class='row'>
+        {{! first }}
+        <div class='col'>
+          <a
+            href='/post/new'
+            class='btn btn-primary btn-lg'
+            id='profileCreatePostBtn'
+          >Create a new Post</a>
         </div>
-        {{!-- 2nd --}}
+        {{! 2nd }}
       </div>
     </div>
   </div>
@@ -42,14 +56,14 @@
       <h3>Recent posts:</h3>
 
       {{#each posts as |post|}}
-      
+
         <div class='row mb-2'>
           <div class='col-md-8'>
             <h4><a href='/post/{{post.id}}/edit'>{{post.title}}</a></h4>
           </div>
           <div class='col-md-4'>
-        
-        </div>
+
+          </div>
         </div>
       {{/each}}
     </div>
@@ -57,4 +71,3 @@
 </div>
 
 <script src='./js/profile.js'></script>
-
