--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 /* defines custom colors */
 :root {
-  --lightGreen: #a2e064;
+  --lightGreen: #cdf1a8b5;
   --lightGreen75: #7dd823bf;
   --lightGreen50: #7dd82380;
   --lightGreen25: #7dd82340;
@@ -40,6 +40,10 @@ h2 {
   padding-top: 10pt;
 }
 
+h4 {
+  padding-top: 10pt;
+}
+
 p {
   font-size: 12pt;
   line-height: 1.6;
@@ -55,46 +59,42 @@ p {
 
 .moveFormSubmitBtns {
   color: var(--darkBlue);
-  background-color: var(--darkGreen75);
+  font-weight: 700;
   border-color: var(--darkBlue);
+  border-width: 2pt;
+  border-radius: 5pt;
 }
 
 /* chat client elements */
 #socketForm {
   background: var(--darkGreen50);
-  padding: 0.25rem;
-  display: flex;
-  height: 3rem;
-  /* width: 300px; */
   box-sizing: border-box;
   backdrop-filter: blur(10px);
 }
 
 #socketText {
   border: none;
-  padding: 0 1rem;
-  flex-grow: 1;
   border-radius: 2rem;
-  margin: 0.25rem;
+  height: 2rem;
 }
 
 #socketText:focus {
   outline: none;
 }
 
-#socketForm > button {
+#socketButton {
   background: var(--darkGreen);
   border: none;
-  padding: 0 1rem;
-  margin: 0.25rem;
   border-radius: 3px;
+  flex-grow: 0;
   outline: none;
   color: white;
+  height: 2rem;
 }
 
 #socketText {
-  background-color: var(--lightYellow50);
-  color: var(--darkGreen);
+  background-color: var(--lightYellow75);
+  color: var(--darkGreen)
 }
 
 #socketMessages {
@@ -103,24 +103,23 @@ p {
   padding: 0;
 }
 
-#socketMessages > li {
+#socketMessages>li {
   padding: 0.5rem 1rem;
   display: flex;
   justify-content: space-between;
-  color: var(--darkGreen);
+  color: var(--darkGreen)
 }
 
-#socketMessages > li:nth-child(odd) {
-  background: var(--lightYellow);
+#socketMessages>li:nth-child(odd) {
+  background: var(--lightYellow75);
 }
 
-#socketMessages > li:nth-child(even) {
+#socketMessages>li:nth-child(even) {
   background: var(--lightGreen50);
 }
 
 .socket-message {
   margin-right: 1em;
-  /* width: 175px; */
 }
 
 .socket-user {
@@ -133,11 +132,12 @@ p {
 }
 
 .socket-container {
+
   height: 400px;
   border: 1px solid var(--darkGreen50);
-  /* font: 16px/26px Georgia, Garamond, Serif; */
   font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Helvetica, Arial, sans-serif;
+  ;
   overflow: auto;
   background-color: var(--lightYellow75);
 }
@@ -145,26 +145,35 @@ p {
 /* profile page elements */
 #profileCreatePostBtn {
   background-color: var(--darkBlue);
-  color: var(--darkYellow);
+  color: white;
   border-color: var(--darkBlue);
+  margin: 2%;
 }
 
 #profileCatNav {
   background-color: var(--darkYellow75);
+  border: var(--darkBlue);
+  border-width: .1pt;
+  border-style: solid;
 }
 
 #profileMainCard {
-  background-color: var(--darkYellow25);
+  /* background-color: var(--darkYellow25); */
+  border: var(--darkBlue);
+  border-width: .1pt;
+  border-style: solid;
 }
 
 /* new post page elements */
 #newPostCard {
-  background-color: var(--lightYellow75);
+  border-radius: 15pt;
+  border: 3pt solid --darkBlue;
 }
 
 #newPostCard .moveForm {
-  background-color: var(--darkYellow50);
+  background-color: var(--lightGreen);
   color: var(--darkGreen);
+  border-radius: 5pt;
 }
 
 #post-category:focus {
@@ -174,26 +183,49 @@ p {
 
 /* login signup elements */
 .loginSignupCard {
-  background-color: var(--lightYellow75);
+  border: var(--darkBlue);
+  border-width: .1pt;
+  border-style: solid;
+  border-radius: 15pt;
+}
+
+.loginSignupCard h2 {
+  padding-left: 8%;
+  font-size: 18pt;
+  padding-bottom: 10pt;
 }
 
 .loginSignupCard .moveForm {
-  background-color: var(--darkYellow50);
-  color: var(--darkGreen);
+  background-color: var(--lightYellow);
+  color: var(--darkBlue);
+  border-radius: 5pt;
 }
 
 /* view-post elements */
 .new-comment-form .moveForm {
-  background-color: var(--darkYellow50);
+  border: var(--darkBlue);
+  border-width: .1pt;
+  border-style: solid;
+  border-radius: 15pt;
   color: var(--darkGreen);
+  background-color: var(--lightYellow);
+  margin: 10pt;
 }
 
-#commentBucket > div:nth-child(odd) {
-  background: var(--darkYellow25);
+#commentBucket>div:nth-child(odd) {
+  border: var(--darkBlue);
+  border-width: 1pt;
+  border-style: solid;
+  border-radius: 15pt;
+  margin-bottom: 15pt;
 }
 
-#commentBucket > div:nth-child(even) {
-  background: var(--darkYellow50);
+#commentBucket>div:nth-child(even) {
+  border: var(--darkBlue);
+  border-width: 1pt;
+  border-style: solid;
+  border-radius: 15pt;
+  background-color: var(--lightYellow);
 }
 
 /* homepage elements */
