--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,7 +94,7 @@ p {
 
 #socketText {
   background-color: var(--lightYellow75);
-  color: var(--darkGreen)
+  color: var(--darkGreen);
 }
 
 #socketMessages {
@@ -103,18 +103,18 @@ p {
   padding: 0;
 }
 
-#socketMessages>li {
+#socketMessages > li {
   padding: 0.5rem 1rem;
   display: flex;
   justify-content: space-between;
-  color: var(--darkGreen)
+  color: var(--darkGreen);
 }
 
-#socketMessages>li:nth-child(odd) {
+#socketMessages > li:nth-child(odd) {
   background: var(--lightYellow75);
 }
 
-#socketMessages>li:nth-child(even) {
+#socketMessages > li:nth-child(even) {
   background: var(--lightGreen50);
 }
 
@@ -132,12 +132,10 @@ p {
 }
 
 .socket-container {
-
   height: 400px;
   border: 1px solid var(--darkGreen50);
   font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Helvetica, Arial, sans-serif;
-  ;
   overflow: auto;
   background-color: var(--lightYellow75);
 }
@@ -153,14 +151,14 @@ p {
 #profileCatNav {
   background-color: var(--darkYellow75);
   border: var(--darkBlue);
-  border-width: .1pt;
+  border-width: 0.1pt;
   border-style: solid;
 }
 
 #profileMainCard {
   /* background-color: var(--darkYellow25); */
   border: var(--darkBlue);
-  border-width: .1pt;
+  border-width: 0.1pt;
   border-style: solid;
 }
 
@@ -184,7 +182,7 @@ p {
 /* login signup elements */
 .loginSignupCard {
   border: var(--darkBlue);
-  border-width: .1pt;
+  border-width: 0.1pt;
   border-style: solid;
   border-radius: 15pt;
 }
@@ -204,7 +202,7 @@ p {
 /* view-post elements */
 .new-comment-form .moveForm {
   border: var(--darkBlue);
-  border-width: .1pt;
+  border-width: 0.1pt;
   border-style: solid;
   border-radius: 15pt;
   color: var(--darkGreen);
@@ -212,7 +210,7 @@ p {
   margin: 10pt;
 }
 
-#commentBucket>div:nth-child(odd) {
+#commentBucket > div:nth-child(odd) {
   border: var(--darkBlue);
   border-width: 1pt;
   border-style: solid;
@@ -220,7 +218,7 @@ p {
   margin-bottom: 15pt;
 }
 
-#commentBucket>div:nth-child(even) {
+#commentBucket > div:nth-child(even) {
   border: var(--darkBlue);
   border-width: 1pt;
   border-style: solid;
