--- a/views/view-post.handlebars
+++ b/views/view-post.handlebars
@@ -1,6 +1,7 @@
-{{! This is the single post view,  where a user is sent when they click on a posts title }}
-<div class='card'>
-  <div class='container' style='background-color: #FFF7D4;'>
+{{! This is the single post view, where a user is sent when they click on a posts title }}
+<div class='card no-border'>
+  <div class='container'
+    style='border-width: 1pt; border-radius: 15pt; border-style: solid; border-color: var(--darkBlue);'>
     <div class='text-center'>
       <div class='row mb-4 post'>
         <div class='col-md-5'>
@@ -24,58 +25,57 @@
 </div>
 
 {{#if logged_in}}
-  {{! If a user is logged in then they get access to a comment form }}
-  <div class='card'>
-    <div class='container' style='background-color: #FFF7D4;'>
-      <div class='col-sm'>
-        <form class='form new-comment-form'>
-          <div class='form-group row'>
-            <label class='col-4' for='comment-name'>Add a comment</label>
-            <input
-              class='form-input col-8 moveForm'
-              type='text'
-              id='comment-name'
-              name='comment-name'
-            />
-          </div>
-          <div class='form-group'>
-            <button type='submit' class='btn moveFormSubmitBtns'>Create Comment</button>
-          </div>
-        </form>
-      </div>
+{{! If a user is logged in then they get access to a comment form }}
+<div class='card no-border'>
+  <div class='container'
+    style='border-width: 1pt; border-radius: 15pt; border-style: solid; border-color: var(--darkBlue); margin-top: 15pt; background-color: var(--lightYellow);'>
+    <div class='col-sm'>
+      <form class='form new-comment-form'>
+        <div class='form-group row'>
+          <label class='col-4' style="padding-top: 10pt;" for='comment-name'>
+            <p style="font-weight: 700; margin: 0; padding: 1%;">Add a Comment</p>
+          </label>
+          <input class='form-input col-8 moveForm' style="background-color: #FFFFFF;" type='text' id='comment-name'
+            name='comment-name' />
+        </div>
+        <div class='form-group'>
+          <button type='submit' class='btn moveFormSubmitBtns'>Create Comment</button>
+        </div>
+      </form>
     </div>
   </div>
+</div>
 {{/if}}
 
 {{#if comments}}
-  {{! only render comments section if they exist }}
-  <h4> User comments</h4>
-  <div id='commentBucket'>
-    {{#each comments as |comment|}}
-      <div class='card'>
-        <div class='card-body'>
-          <div class='text-center'>
-            <div class='row post'>
-              <div class='col-md-5'>
-                <p>Comment by
-                  {{comment.user.username}}
-                  on
-                  {{format_date comment.date_created}}</p>
-              </div>
-              <div class='col-md-7'>
-                <p>
-                  {{comment.content}}
-                </p>
-              </div>
-            </div>
+{{! only render comments section if they exist }}
+<h4> User comments</h4>
+<div id='commentBucket'>
+  {{#each comments as |comment|}}
+  <div class='card'>
+    <div class='card-body'>
+      <div class='text-center'>
+        <div class='row post'>
+          <div class='col-md-5'>
+            <p>Comment by
+              {{comment.user.username}}
+              on
+              {{format_date comment.date_created}}</p>
+          </div>
+          <div class='col-md-7'>
+            <p>
+              {{comment.content}}
+            </p>
           </div>
         </div>
       </div>
-    {{/each}}
+    </div>
   </div>
+  {{/each}}
+</div>
 {{/if}}
 
 {{#if logged_in}}
-  {{! If a user is logged in then they get access to a comment form }}
-  <script src='/./js/comment.js'></script>
+{{! If a user is logged in then they get access to a comment form }}
+<script src='/./js/comment.js'></script>
 {{/if}}
